--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dev_dependencies:
   chopper_generator: ^6.0.1
   retrofit_generator: '>=5.0.0 <6.0.0'
   build_runner: '>=2.3.0 <4.0.0' 
+  json_serializable: any
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
